# netsci-research

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
netreslib/: network.py  utils.py
netreslib/scripts/: __init__.py  cli.py  collect.py  gen.py  info.py  stats.py
tests/: test_utils.py
