[tool.poetry]
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
description = ""
name = "netresearch"
version = "0.1.0"

[tool.poetry.dependencies]
attrs = "^20.3.0"
colorlog = "^4.1.0"
filelock = "^3.0.12"
jax = "^0.1.75"
jaxlib = "^0.1.52"
netprocess = {path = "../netprocess", develop = true}
networkx = "^2.4"
numpy = "^1.18.2"
pandas = "^1.0.3"
plotly = "^4.6.0"
powerlaw = "^1.4.6"
pre-commit = "^2.7.1"
python = "^3.6.9"
tqdm = "^4.45.0"
unidecode = "^1.1.1"
zstd = "^1.4.8"

[tool.poetry.dev-dependencies]
black = "20.8b1"
flake8 = "^3.8.3"
ipython = "^7.15.0"
pre-commit = "^2.2.0"
pytest = "^5.4.1"

[tool.black]
target-version = ['py36']

[tool.poetry.scripts]
netprocess = 'netprocess.scripts.cli:cli'

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
